--- a/openCVLibrary320/build.gradle
+++ b/openCVLibrary320/build.gradle
@@ -14,6 +14,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
